--- a/game/game.html
+++ b/game/game.html
@@ -1,6 +1,7 @@
 
 <!DOCTYPE html>
-<html><head>
+<html>
+<head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 <title>Conway's Game of Life</title>
 
